get by id and clear button working : to do by ETH Address.

--- a/src/app/viewcatz/viewcatz.component.html
+++ b/src/app/viewcatz/viewcatz.component.html
@@ -66,51 +66,34 @@
 
         </div>
 
-        <div class="ByCatIDView" *ngIf="searchedId!=0" style="max-width: 100%; width: 65%;">
-
-            Results for searchedId {{searchedId}}...
-
+        <div class="ByCatIDView" *ngIf="searchedId!=0"
+            style="max-width: 100%; width: 65%;top: -90px;position: relative;">
+            <br>
+            <button class="styled" *ngIf="catObj!=null" (click)="clearCatObj()">Clear</button>
+            <br>            <br>
+            <br>
+            <br>
 
             <div id="card-devilcat" style="min-width: 75%;" *ngIf="catObj!=null">
-                <p>
-                    {{catObj.data.name}}
+
+
+
+
+                <p> {{catObj.data.name}}
                     <br>
                     <img id="center-img" src={{catObj.data.image}} alt="logo" height="200vh" width="200vw"
                         style="border-radius: 5%" />
 
-                    <!-- <tr *ngFor="let attribute of catObj.data.attributes; let i = index"> -->
-
-
                 <table id="styled" class="table" style="border-style:none">
-                    <tbody style="border-style:none">
-                        <p>
+                    <tbody style="border-style:none" id="table-cat-attributes">
+
                         <tr style="border-style:none" *ngFor="let attribute of catObj.data.attributes; let i = index">
-                            {{attribute.trait_type}} : {{attribute.value}} 
-
-
-                        </tr></p>
-                        <!-- <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-
-                                  </tr> -->
+                            {{attribute.trait_type}} : {{attribute.value}}
+                        </tr>
 
                     </tbody>
                 </table>
-
-
-
-
-
-                <!-- <td>{{attribute.value}}</td> -->
-
-                <!-- </tr> -->
-                <!-- </p> -->
-
-
             </div>
-
         </div>
-
     </div>
 </div>
