--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <p id="navbar-text"  class="styled"[routerLink]="['/manage']">Login</p>
+        </li> 
         <li class="nav-item" id="nav-item">
           <p id="navbar-text" class="styled" [routerLink]="['/about']">About</p>
         </li>
@@ -34,8 +37,9 @@
         </li>
 
         <li class="nav-item">
-          <p id="navbar-text"  class="styled"[routerLink]="['/viewcatz']">View Catz</p>
-        </li> -->
+          <p id="navbar-text"  class="styled"[routerLink]="['/viewcatz']">DevilCat LookUp</p>
+        </li>
+        
         <!-- <li class="nav-item">
           <p id="navbar-text"  class="styled"[routerLink]="['/roadmap']">RoadMap</p>
         </li>
