staking looking good need to connect metamask

--- a/src/app/components/manage/manage.component.scss
+++ b/src/app/components/manage/manage.component.scss
@@ -1,67 +1,84 @@
 #styled {
-    width: 95%;
-    margin-bottom: 25px;
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 275px;
+  width: 95%;
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 275px;
 
-    border: 0;
-    // line-height: 2.5;
-    // // padding: 0 20px;
-    // font-size: 1rem;
-    // text-align: center;
-    color: black;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: aliceblue;
-    // background-image: linear-gradient(to top left,
-    //     rgba(0, 0, 0, 0.2),
-    //     rgba(0, 0, 0, 0.2) 30%,
-    //     rgba(0, 0, 0, 0));
-    // box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-  }
-  
-  #manageCard {
-    width: 95%;
-    margin-bottom: 25px;
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 275px;
-    // border-radius: 5px;
-    // word-break: break-all;
+  border: 0;
+  // line-height: 2.5;
+  // // padding: 0 20px;
+  // font-size: 1rem;
+  // text-align: center;
+  color: black;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: aliceblue;
+  // background-image: linear-gradient(to top left,
+  //     rgba(0, 0, 0, 0.2),
+  //     rgba(0, 0, 0, 0.2) 30%,
+  //     rgba(0, 0, 0, 0));
+  // box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
 
-    color: black;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: aliceblue;
-    background-image: linear-gradient(to top left,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2) 30%,
-        rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-    border: 0;
-    line-height: 2.5;
-    font-size: 1rem;
+#styled-manage {
+  margin: 5px;
+}
 
+#manageCard {
+  width: 95%;
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 275px;
+  // border-radius: 5px;
+  // word-break: break-all;
 
-  }
-
-  #styled:hover{
-    background-color: bisque;
-    border-radius: 5%;
-    transform: scale(1.05);
-    text-decoration: underline;
+  color: black;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: aliceblue;
+  background-image: linear-gradient(to top left,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2) 30%,
+      rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  border: 0;
+  line-height: 2.5;
+  font-size: 1rem;
 
 
-  }
+}
+
+#styled:hover {
+  background-color: bisque;
+  border-radius: 5%;
+  transform: scale(1.05);
+  text-decoration: underline;
+}
 
 
-  
-  #styled:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-      inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-  }
-  
+
+
+#staked:hover {
+  transform: scale(1.01);
+  text-decoration: underline;
+}
+
+#unstaked:hover {
+  transform: scale(1.01);
+  text-decoration: underline;
+
+}
+
+
+
+
+#styled:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+}
+
 
 
 //   #card-devilcat{
@@ -69,21 +86,21 @@
 //     border-radius: 5%;
 //     max-width: 60%;
 //   }
-  
-  
+
+
 //   #card-devilcat:hover{
 //     background-color: bisque;
 //     border-radius: 5%;
 //     transform: scale(1.05);
 //     text-decoration: underline;
-  
+
 //   }
 
 
 
 //   #styledDisabled {
 //     max-width: 200px;
-  
+
 //     min-width: 150px;
 //     margin-bottom: 4px;
 //     border: 0;
@@ -101,4 +118,3 @@
 //         rgba(0, 0, 0, 0));
 //     box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
 //   }
-  
