home page more aligned

--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -11,20 +11,10 @@
                 <br>
                 <u> View Your Catz or Others!</u>
             </h3>
-            <div class="row">
+            <div class="row" style="justify-content: center;">
 
 
-                <div class="col-4">
-                    <div id="card-devilcat" style="min-height:100%">
-                        <p>Metamask Login</p>
-                        <br>
-                        <button id="navbar-text" class="styled">Connect</button>
-
-                    </div>
-                </div>
-
-
-
+    
                 <div class="col-4">
                     <div id="card-devilcat" style="min-height:100%">
                         <p>Eth Address Lookup</p>
