--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,121 +3,105 @@
 
     <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
 
-
       <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
         style="border-radius: 5%" />
-      <br>
-      <h3 class="card-text">
+
+      <h3>
+
         <br>
         <u> Welcome to Toonverse Studios!</u>
       </h3>
       <p> A WEB3 Art development platfrom.</p>
+    </div>
+    <div class="card" id="card-devilcat">
+      <h6>**MINTING NOW**</h6>
+      <div class="container">
 
+      <div class="card-body">
+        <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="50%" width="75%"
+          style="border-radius: 5%" />
+        <div class="card-text"><br>
+          <p> The Devil Cats Minting is taking place now.
+            <br> Currently 1602 out of 2222.
+            <br> Owning a DevilCatz token entitles you to future collection drops.
+          </p>
+          <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+        </div>
 
-
-      <p>This is home page for all things Toonverse and for the DevilCatz holders.</p>
-      <br>
-
-      <div class="card" id="card-devilcat" style="width: 50%; ">
-        <h6>**MINTING NOW**</h6>
-        <div class="card-body">
-          <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
-            style="border-radius: 5%" />
-          <div class="card-text">
-            <p> The Devil Cats Minting is taking place now.
-              <br> Currently 1602 out of 2222.
-            <br> Owning a DevilCatz token entitles you to future collection drops.</p>
-            <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
-
-
-          </div>
         </div>
       </div>
+    </div>
 
-
+    <div class="card-text">
       <br>
       <h6>Coming Up to All Devil Cats Holders!</h6>
       <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders. <br>
         Ladies and Gentlemen we introduce to you..<br>
-        CrazyCloudClans and FrutiyGremlins.Wtf<br>
+        CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
       </p>
+    </div>
+    <div class="grid-container">
+      <div class="grid-item" style="float: right;">
+        <div id="card-free-mints">
+          <div class="card-header">
+            <p>CrazyCloudz.wtFluff</p>
+          </div>
 
-      <div class="grid-container">
-        <div class="grid-item" style="float: right;">
-          <div id="card-free-mints">
-            <div class="card-header">
-              <p>CrazyCloudz.Fluff</p>
-            </div>
+          <div class="card-body">
+            <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
+              width="200vw" style="border-radius: 5%" />
+          </div>
 
-            <div class="card-body">
-              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
-                width="200vw" style="border-radius: 5%" />
-            </div>
+          <div class="card-text">
+            <p>Fun cute cloudz made by none other than the Ledgendary Artist KEITH MILLER</p>
 
-            <div class="card-text">
-              <p>Fun cute cloudz made by none other than the Ledgendary Artist KEITH MILLER</p>
-
-            </div>
           </div>
         </div>
-        <div class="grid-item">
-          <div id="card-free-mints">
-            <div class="card-header">
-              <p>FruitTownGremlins.Wtf</p>
-            </div>
+      </div>
+      <div class="grid-item">
+        <div id="card-free-mints">
+          <div class="card-header">
+            <p>FruitTownGremlins.Wtf</p>
+          </div>
 
-            <div class="card-body">
-              <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-                height="200vh" width="200vw" style="border-radius: 5%" />
-            </div>
+          <div class="card-body">
+            <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
+              height="200vh" width="200vw" style="border-radius: 5%" />
+          </div>
 
-            <div class="card-text">
-              <p>Fun Gremlins derivative from the crazy mind of KEITH MILLER</p>
-              <br>
-              <br>
-            </div>
+          <div class="card-text">
+            <p>Fun Gremlins derivative from the crazy mind of KEITH MILLER</p>
+            <br>
+            <br>
           </div>
         </div>
-
       </div>
 
+    </div>
 
-      <div class="card-body">
 
+    <div class="card-body">
+      <h5 class="card-text">
+        <u> Legal Disclaimer</u>
+      </h5>
+      <p>
+        The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+        cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+        advise,
+        investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
+        any
+        of
+        the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+        at
+        your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+        Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
+        due
+        diligence and consult your financial advisor before making any financial decisions. Always make sure that
+        you
+        are in compliance with your local laws and regulations before
+        you make any purchase.
 
-        <h6> **Coming Soon Devil Cat Staking**</h6>
-        < <br>
-          <p> We will be releasing the tokenzation of DevilCatz and staking.
-            Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
-            <br>
-
-          </p>
-
-          <h5 class="card-text">
-            <br>
-            <br>
-            <br>
-
-            <u> Legal Disclaimer</u>
-          </h5>
-          <p>
-            The creators and maintainers of Toonverse Studios are not liable for any loss when trading
-            cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
-            advise,
-            investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
-            any
-            of
-            the website’s content as such. Please note, there are always risks associated with smart contracts, use them
-            at
-            your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
-            Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
-            due
-            diligence and consult your financial advisor before making any financial decisions. Always make sure that
-            you
-            are in compliance with your local laws and regulations before
-            you make any purchase.
-
-          </p>
-      </div>
+      </p>
     </div>
   </div>
+</div>
