--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -1,14 +1,21 @@
 <div class="center-div">
   <div class="card main">
-    <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
+    <div class="card-header" style="border-radius: 5%; position: relative; top: -90px; ">
+      <br>
+      <h6 style="font-weight: bold; "><u>**Coming Soon Devil Cat Staking**</u> </h6>
+      <br>
+      <p style=""> We will be releasing the tokenzation of DevilCatz and staking.
+        Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
+        <br>
 
+      </p>
       <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
         style="border-radius: 5%" />
 
       <h3 class="card-text" style="font-size: 2em">
         <br>
 
-        <h3 style="text-decoration: underline;">Your Account</h3>
+        <h3 style="text-decoration: underline;">Your Account EXAMPLE</h3>
         <br><br>
       </h3>
 
@@ -35,14 +42,14 @@
             TOATAL UNSTAKED DEVILCATZ :10
             <br>
             TOATAL STAKED DEVILCATZ :10
-            <p>Claimed TOONCOIN : 2500        <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
+          <p>Claimed TOONCOIN : 2500 <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
+              height="25vh" width="25" style="border-radius: 5%" />
+            <br>
+            Unclaimed TOONCOIN : 250
+            <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
               style="border-radius: 5%" />
-              <br>
-              Unclaimed TOONCOIN : 250
-              <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
-                style="border-radius: 5%" />
 
-            </p>
+          </p>
 
           <!-- Your {{ contractSymbol }} : {{ tokensOwned }}
           <br />
