--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <img src="./../../../assets/toonverse/toonverseLogo.png" alt="logo" width="50" style="border-radius: 50%;" />
         </div>
 
-        <h6  id="navbar-text">Toonverse Studios!</h6>
+        <h6 id="navbar-text">Toonverse Studios!</h6>
 
       </a>
 
@@ -26,9 +26,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li>
+          <p> <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat!</button>
+          </p>
+        </li>
         <li class="nav-item">
-          <p id="navbar-text"  class="styled"[routerLink]="['/manage']">Login</p>
-        </li> 
+          <p id="navbar-text" class="styled" [routerLink]="['/manage']">Login</p>
+        </li>
         <li class="nav-item" id="nav-item">
           <p id="navbar-text" class="styled" [routerLink]="['/about']">About</p>
         </li>
@@ -37,9 +41,9 @@
         </li>
 
         <li class="nav-item">
-          <p id="navbar-text"  class="styled"[routerLink]="['/viewcatz']">DevilCat LookUp</p>
+          <p id="navbar-text" class="styled" [routerLink]="['/viewcatz']">DevilCat LookUp</p>
         </li>
-        
+
         <!-- <li class="nav-item">
           <p id="navbar-text"  class="styled"[routerLink]="['/roadmap']">RoadMap</p>
         </li>
@@ -50,8 +54,7 @@
       <!-- Left links -->
 
       <!-- Search form -->
-        <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
-        <button id="navbar-text" class="styled" [routerLink]="['/home']">Stake DevilCat</button>
+      <!-- <button id="navbar-text" class="styled" [routerLink]="['/home']">Stake DevilCat</button> -->
       <!-- <form class="d-flex input-group w-auto">
         <input
           type="search"
