working on front page.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,76 +12,85 @@
         <u> Welcome to Toonverse Studios!</u>
       </h3>
       <p> A WEB3 Art development platfrom.</p>
-    </div>
-    <div class="card" id="card-devilcat">
-      <h6>**MINTING NOW**</h6>
-      <div class="container">
-
-      <div class="card-body">
-        <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="50%" width="75%"
-          style="border-radius: 5%" />
-        <div class="card-text"><br>
-          <p> The Devil Cats Minting is taking place now.
-            <br> Currently 1602 out of 2222.
-            <br> Owning a DevilCatz token entitles you to future collection drops.
-          </p>
-          <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
-        </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="card-text">
-      <br>
-      <h6>Coming Up to All Devil Cats Holders!</h6>
-      <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders. <br>
-        Ladies and Gentlemen we introduce to you..<br>
-        CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
-      </p>
-    </div>
-    <div class="grid-container">
-      <div class="grid-item" style="float: right;">
-        <div id="card-free-mints">
-          <div class="card-header">
-            <p>CrazyCloudz.wtFluff</p>
-          </div>
+      <div class="card" id="card-freeMint">
+        <h6>**MINTING NOW**</h6>
+        <div class="container">
 
           <div class="card-body">
-            <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
-              width="200vw" style="border-radius: 5%" />
-          </div>
+            <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="50%" width="75%"
+              style="border-radius: 5%" />
+            <div class="card-text"><br>
+              <p> The Devil Cats Minting is taking place now.
+                <br> Currently 1602 out of 2222.
+                <br> Owning a DevilCatz token entitles you to future collection drops.
+              </p>
+              <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+            </div>
 
-          <div class="card-text">
-            <p>Fun cute cloudz made by none other than the Ledgendary Artist KEITH MILLER</p>
-
-          </div>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div id="card-free-mints">
-          <div class="card-header">
-            <p>FruitTownGremlins.Wtf</p>
-          </div>
-
-          <div class="card-body">
-            <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-              height="200vh" width="200vw" style="border-radius: 5%" />
-          </div>
-
-          <div class="card-text">
-            <p>Fun Gremlins derivative from the crazy mind of KEITH MILLER</p>
-            <br>
-            <br>
           </div>
         </div>
       </div>
 
+
+
+      <div class="container" id="staked">
+        <h6>Coming Up to All Devil Cats Holders!</h6>
+        <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders before we implement staking for future art.<br>
+          Ladies and Gentlemen we introduce to you..<br>
+          CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
+        </p>
+
+
+
+
+
+
+
+
+
+        <div class="row" style="justify-content: center;">
+
+
+
+          <div class="col" style="min-height: 100%;">
+            <div id="card-freeMint">
+         
+              <br>
+              <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
+                height="200vh" width="200vw" style="border-radius: 5%" />
+              <br>
+              <br>
+              <p>COMING SOON</p>
+              <p>                FruitTownGremlins.wtFruit
+              </p>
+              <br>
+              <p>Free mint only available to DevilCatz Holders.</p>
+              <br>
+
+            </div>
+          </div>
+          <div class="col" style="min-height: 100%;">
+            <div id="card-freeMint">
+              <br>
+                   <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
+                width="200vw" style="border-radius: 5%" />
+              <br>
+              <br>
+              <p>COMING SOON</p>
+              <br>
+              <p>CrazyCloudz.wtFluff</p>
+
+              <p>Free mint only available to DevilCatz Holders.</p>
+              <br>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
 
-
-    <div class="card-body">
-      <h5 class="card-text">
+    <div class="legal-disclaimer">
+      <h5>
         <u> Legal Disclaimer</u>
       </h5>
       <p>
@@ -103,5 +112,7 @@
 
       </p>
     </div>
+
+
   </div>
 </div>
