--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -39,14 +39,14 @@
 
 }
 
-#card-devilcat{
+#card-freeMint{
   background-color: aliceblue;
   border-radius: 5%;
-  max-width: 60%;
+  max-width: 85%;
 }
 
 
-#card-devilcat:hover{
+#card-freeMint:hover{
   background-color: bisque;
   border-radius: 5%;
   transform: scale(1.05);
