--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -16,7 +16,7 @@
         <div class="card-text">
 
 
-          <div class="card" id="card-devilcat" style="width: 50%; ">
+          <div class="card" id="card-lightblue" style="width: 50%; ">
             <h6>**MINT NOW**</h6>
             <div class="card-body">
               <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
