--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -39,14 +39,14 @@
 
 }
 
-#card-devilcat{
+#card-lightblue{
   background-color: aliceblue;
   border-radius: 5%;
   max-width: 60%;
 }
 
 
-#card-devilcat:hover{
+#card-lightblue:hover{
   background-color: bisque;
   border-radius: 5%;
   transform: scale(1.05);
