--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -16,7 +16,7 @@
 
     
                 <div class="col-4">
-                    <div id="card-devilcat" style="min-height:100%">
+                    <div id="card-lightblue" style="min-height:100%">
                         <p>Eth Address Lookup</p>
                         <mdb-form-control>
                             <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
@@ -33,7 +33,7 @@
 
 
                 <div class="col-4">
-                    <div id="card-devilcat" style="min-height:100%">
+                    <div id="card-lightblue" style="min-height:100%">
 
                         <p>DevilCat ID# Lookup</p>
 
@@ -66,7 +66,7 @@
 
             <div id="container">
                 <div class="row">
-                    <div class="col-md-3" id="card-devilcat-multi" *ngFor="let token of tokenJsonArray">
+                    <div class="col-md-3" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
                         <p>{{token.data.name}}</p>
                         <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
                             style="border-radius: 5%" />
@@ -90,7 +90,7 @@
             <br>
             <br>
 
-            <div id="card-devilcat" style="min-width: 75%;">
+            <div id="card-lightblue" style="min-width: 75%;">
 
 
 
