--- a/src/app/components/viewcatz/viewcatz.component.scss
+++ b/src/app/components/viewcatz/viewcatz.component.scss
@@ -11,7 +11,7 @@
     background-color: pink;
 }
 
-#card-devilcat{
+#card-lightblue{
     max-width: 100%;
 }
 
@@ -26,7 +26,7 @@
     display: grid;
   }
 
-  #card-devilcat-multi{
+  #card-lightblue-multi{
     background-color: aliceblue;
     border-radius: 5%;
     max-width: 60%;
@@ -36,7 +36,7 @@
   }
   
   
-  #card-devilcat-multi:hover{
+  #card-lightblue-multi:hover{
     background-color: bisque;
     border-radius: 5%;
     transform: scale(1.05);
