--- a/src/styles.scss
+++ b/src/styles.scss
@@ -270,14 +270,14 @@ p {
 
 }
 
-#card-devilcat{
+#card-lightblue{
   background-color: aliceblue;
   border-radius: 5%;
   max-width: 60%;
 }
 
 
-#card-devilcat:hover{
+#card-lightblue:hover{
   background-color: bisque;
   border-radius: 5%;
   transform: scale(1.05);
