working on front page.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
         <u> Welcome to Toonverse Studios!</u>
       </h3>
       <p> A WEB3 Art development platfrom.</p>
-      <div class="card" id="card-freeMint">
+      <div class="card" id="card-mintDevilCat">
         <h6>**MINTING NOW**</h6>
         <div class="container">
 
@@ -56,6 +56,7 @@
             <div id="card-freeMint">
          
               <br>
+              <br>
               <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
                 height="200vh" width="200vw" style="border-radius: 5%" />
               <br>
@@ -70,14 +71,14 @@
             </div>
           </div>
           <div class="col" style="min-height: 100%;">
-            <div id="card-freeMint">
-              <br>
+            <div id="card-freeMint" style="min-height: 100%;">
+              <br>              <br>
+
                    <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
                 width="200vw" style="border-radius: 5%" />
               <br>
               <br>
               <p>COMING SOON</p>
-              <br>
               <p>CrazyCloudz.wtFluff</p>
 
               <p>Free mint only available to DevilCatz Holders.</p>
