--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -39,6 +39,20 @@
 
 }
 
+#card-mintDevilCat{
+  background-color: aliceblue;
+  border-radius: 5%;
+  max-width: 50%;
+}
+
+#card-mintDevilCat:hover{
+  background-color: bisque;
+  border-radius: 5%;
+  max-width: 60%;
+  text-decoration: underline;
+
+}
+
 #card-freeMint{
   background-color: aliceblue;
   border-radius: 5%;
