--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,17 +1,19 @@
 <div class="center-div">
   <div class="card main">
 
-    <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
+    <div class="card-header" id="text" style="border-radius: 5%; position: relative; top:-50px;">
 
-      <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
-        style="border-radius: 5%" />
-
-      <h3>
-
+      <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="35%" width="35%"
+        style="border-radius: 5%; object-fit: contain; height: auto;" />
         <br>
-        <u> Welcome to Toonverse Studios!</u>
+        <br>
+      <h3>
+        Welcome to Toonverse Studios!
       </h3>
       <p> A WEB3 Art development platfrom.</p>
+
+    </div>
+    <div class="card-body" >
       <div class="card" id="card-mintDevilCat">
         <h6>**MINTING NOW**</h6>
         <div class="container">
@@ -30,15 +32,19 @@
           </div>
         </div>
       </div>
+      <br>
+      <br>
 
 
 
-      <div class="container" id="staked">
+      <div class="container" id="text">
         <h6>Coming Up to All Devil Cats Holders!</h6>
         <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders before we implement staking for future art.<br>
           Ladies and Gentlemen we introduce to you..<br>
           CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
         </p>
+        <br>
+        <br>
 
 
 
@@ -52,17 +58,17 @@
 
 
 
-          <div class="col" style="min-height: 100%;">
+          <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
             <div id="card-freeMint">
-         
+
               <br>
               <br>
               <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-                height="200vh" width="200vw" style="border-radius: 5%" />
+                width="100%" height="180vh" style="border-radius: 5%;object-fit: contain;" />
               <br>
               <br>
               <p>COMING SOON</p>
-              <p>                FruitTownGremlins.wtFruit
+              <p> FruitTownGremlins.wtFruit
               </p>
               <br>
               <p>Free mint only available to DevilCatz Holders.</p>
@@ -70,12 +76,12 @@
 
             </div>
           </div>
-          <div class="col" style="min-height: 100%;">
+          <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
             <div id="card-freeMint" style="min-height: 100%;">
-              <br>              <br>
+              <br> <br>
 
-                   <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
-                width="200vw" style="border-radius: 5%" />
+              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="100%"
+                height="180vh" style="border-radius: 5%;object-fit: contain;" />
               <br>
               <br>
               <p>COMING SOON</p>
@@ -88,30 +94,33 @@
         </div>
 
       </div>
-    </div>
+<br>
+      <div class="container" id="text" style="width: auto;">
+        <h5>
+          <u> Legal Disclaimer</u>
+        </h5>
+        <p>
+          The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+          cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+          advise,
+          investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
+          any
+          of
+          the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+          at
+          your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+          Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
+          due
+          diligence and consult your financial advisor before making any financial decisions. Always make sure that
+          you
+          are in compliance with your local laws and regulations before
+          you make any purchase.
+  
+        </p>
+      </div>
 
-    <div class="legal-disclaimer">
-      <h5>
-        <u> Legal Disclaimer</u>
-      </h5>
-      <p>
-        The creators and maintainers of Toonverse Studios are not liable for any loss when trading
-        cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
-        advise,
-        investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
-        any
-        of
-        the website’s content as such. Please note, there are always risks associated with smart contracts, use them
-        at
-        your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
-        Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
-        due
-        diligence and consult your financial advisor before making any financial decisions. Always make sure that
-        you
-        are in compliance with your local laws and regulations before
-        you make any purchase.
 
-      </p>
+
     </div>
 
 
