done with front page next is mint page.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,15 +5,23 @@
 
       <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="35%" width="35%"
         style="border-radius: 5%; object-fit: contain; height: auto;" />
-        <br>
-        <br>
+      <br>
+      <br>
       <h3>
         Welcome to Toonverse Studios!
       </h3>
-      <p> A WEB3 Art development platfrom.</p>
+      <p> A WEB3 Art development platfrom.<br>
+        Our Tokenomics are real simple.
+        <br>
+        - Mint a DevilCat
+        <br>
+        - Stake your DevilCat to earn TOON
+        <br>
+        - Use TOON to mint future collections.
+      </p>
 
     </div>
-    <div class="card-body" >
+    <div class="card-body">
       <div class="card" id="card-mintDevilCat">
         <h6>**MINTING NOW**</h6>
         <div class="container">
@@ -39,7 +47,7 @@
 
       <div class="container" id="text">
         <h6>Coming Up to All Devil Cats Holders!</h6>
-        <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders before we implement staking for future art.<br>
+        <p> We have TWO MINTS coming up to DevilCatz holders.<br>
           Ladies and Gentlemen we introduce to you..<br>
           CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
         </p>
@@ -94,7 +102,7 @@
         </div>
 
       </div>
-<br>
+      <br>
       <div class="container" id="text" style="width: auto;">
         <h5>
           <u> Legal Disclaimer</u>
@@ -115,7 +123,7 @@
           you
           are in compliance with your local laws and regulations before
           you make any purchase.
-  
+
         </p>
       </div>
 
