--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="center-div">
+<div class="center-div" id="styledText">
   <div class="card main">
 
     <div class="card-header" id="text" style="border-radius: 5%; position: relative; top:-50px;">
@@ -11,15 +11,18 @@
         Welcome to Toonverse Studios!
       </h3>
       <p> A WEB3 Art development platfrom.<br>
-        Our Tokenomics are real simple.
+        Our Tokenomics are really simple.
         <br>
         - Mint a DevilCat
         <br>
         - Stake your DevilCat to earn TOON
         <br>
         - Use TOON to mint future collections.
+        <br>
+        - Grow TOON ecosytem by offering entire collections for TOON or ETH.
+        <br>
+        - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
       </p>
-
     </div>
     <div class="card-body">
       <div class="card" id="card-mintDevilCat">
@@ -31,9 +34,13 @@
               style="border-radius: 5%" />
             <div class="card-text"><br>
               <p> The Devil Cats Minting is taking place now.
-                <br> Currently 1602 out of 2222.
-                <br> Owning a DevilCatz token entitles you to future collection drops.
+                <br> Currently
               </p>
+              <p class="yellowHighlight">{{totalSupply}} Minted!</p>
+              <p>out of</p>
+              <p class="yellowHighlight">2222</p>
+              <br> <p>Owning a DevilCatz token entitles you to future collection drops.</p> 
+
               <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
             </div>
 
@@ -49,7 +56,7 @@
         <h6>Coming Up to All Devil Cats Holders!</h6>
         <p> We have TWO MINTS coming up to DevilCatz holders.<br>
           Ladies and Gentlemen we introduce to you..<br>
-          CrazyCloudz.wtFluff and FruitTownGremlins.Wtf<br>
+          CrazyCloudzClub.wtFluff and FruitTownGremlins.WtFruit<br>
         </p>
         <br>
         <br>
@@ -72,7 +79,7 @@
               <br>
               <br>
               <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-                width="100%" height="180vh" style="border-radius: 5%;object-fit: contain;" />
+                width="100%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
               <br>
               <br>
               <p>COMING SOON</p>
@@ -89,11 +96,12 @@
               <br> <br>
 
               <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="100%"
-                height="180vh" style="border-radius: 5%;object-fit: contain;" />
+                height="180vh" style="border-radius: 75%;object-fit: contain;" />
               <br>
               <br>
               <p>COMING SOON</p>
-              <p>CrazyCloudz.wtFluff</p>
+              <p>CrazyCloudzClub.wtFluff</p>
+              <br>
 
               <p>Free mint only available to DevilCatz Holders.</p>
               <br>
