--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,20 @@
+#styledText {
+
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+}
+
+.yellowHighlight{
+  
+    background-color: Yellow;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #center-img {
   justify-content: center;
   align-items: center;
