--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,4 @@
 <div class="center-div" id="styledText">
-  <div class="card main">
-
-    <div class="card-header" id="text" style="border-radius: 5%; position: relative; top:-50px;">
-
-      <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="35%" width="35%"
-        style="border-radius: 5%; object-fit: contain; height: auto;" />
-      <br>
-      <br>
       <h3>
         Welcome to Toonverse Studios!
       </h3>
@@ -23,17 +15,15 @@
         <br>
         - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
       </p>
-    </div>
-    <div class="card-body">
       <div class="card" id="card-mintDevilCat">
-        <h6>**MINTING NOW**</h6>
         <div class="container">
+          <div class="card-body">        <h6>**MINTING NOW**</h6>
 
-          <div class="card-body">
-            <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="50%" width="75%"
+            <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="40%" width="63%"
               style="border-radius: 5%" />
-            <div class="card-text"><br>
-              <p> The Devil Cats Minting is taking place now.
+              <br>
+              <br>
+              <p> The DevilCats Minting is taking place now.
                 <br> Currently
               </p>
               <p class="yellowHighlight">{{totalSupply}} Minted!</p>
@@ -42,7 +32,6 @@
               <br> <p>Owning a DevilCatz token entitles you to future collection drops.</p> 
 
               <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
-            </div>
 
           </div>
         </div>
@@ -53,6 +42,7 @@
 
 
       <div class="container" id="text">
+        <br>
         <h6>Coming Up to All Devil Cats Holders!</h6>
         <p> We have TWO MINTS coming up to DevilCatz holders.<br>
           Ladies and Gentlemen we introduce to you..<br>
@@ -79,7 +69,7 @@
               <br>
               <br>
               <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-                width="100%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
+                width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
               <br>
               <br>
               <p>COMING SOON</p>
@@ -95,7 +85,7 @@
             <div id="card-freeMint" style="min-height: 100%;">
               <br> <br>
 
-              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="100%"
+              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="95%"
                 height="180vh" style="border-radius: 75%;object-fit: contain;" />
               <br>
               <br>
@@ -111,7 +101,13 @@
 
       </div>
       <br>
+      <br>
+  
       <div class="container" id="text" style="width: auto;">
+
+        <br>
+        <br>
+       
         <h5>
           <u> Legal Disclaimer</u>
         </h5>
@@ -137,8 +133,6 @@
 
 
 
-    </div>
 
 
-  </div>
 </div>
