--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -1,5 +1,5 @@
 <div class="center-div">
-  <div class="card main">
+  <div class="card main" style="width: 100%;">
 
     <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
 
@@ -9,15 +9,11 @@
       <br>
 
       <div class="card-body">
-        <h3 class="card-text">
-          <br>
-          <u>Mint a DevilCatz</u>
-        </h3>
+
         <div class="card-text">
 
 
-          <div class="card" id="card-lightblue" style="width: 50%; ">
-            <h6>**MINT NOW**</h6>
+          <div class="card" class="card-lightblue" style="width: 100%; ">
             <div class="card-body">
               <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
                 style="border-radius: 5%" />
@@ -48,7 +44,7 @@
                   <br>
                 </p>
 
-            
+
                 <div class="div-quantity-selector" style="justify-items: center;">
 
                   <button class="mint-button w-button" (click)="minus()">
@@ -85,10 +81,10 @@
                   <!-- <button class="mint-button w-button" (click)="connect()">
                     Connect Wallet
                   </button> -->
-                  <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+                  <button id="styled-mint-button" [routerLink]="['/mint']">Mint DevilCat</button>
                 </div>
-                <div *ngIf="this.userAddress != '' && this.totalPrice!='0'">
-                  <button class="mint-button w-button" type="submit" (click)="buy()">
+                <!-- <div *ngIf="this.userAddress != '' && this.totalPrice!='0'">
+                  <button  id="styled-mint-button" (click)="buy()">
                     Mint
                   </button>
                 </div>
@@ -96,7 +92,7 @@
                   <button class="mint-button w-button" type="submit" (click)="buy()">
                     Disabled
                   </button>
-                </div>
+                </div> -->
                 <p>
                   <br>
 
@@ -131,7 +127,7 @@
             with
             the Devil Catz are a main character in our world building and animated series.<br>
             <br>
-            
+
           </p>
 
           <p> The Devil Cats Minting is taking place now.
