front page good.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
-<div class="center-div" id="styledText">
+<div class="center-div" style="  display: grid;
+">
+  <div style id="styledText">
       <h3>
         Welcome to Toonverse Studios!
       </h3>
@@ -15,6 +17,7 @@
         <br>
         - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
       </p>
+    </div>
       <div class="card" id="card-mintDevilCat">
         <div class="container">
           <div class="card-body">        <h6>**MINTING NOW**</h6>
