working on mint page.

--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -1,15 +1,23 @@
-<div class="center-div" style="justify-content: center;
-justify-items: center;
-display: grid; max-width: fit-content;">
-  <div class="container" style="width: 100%; max-width: 750px;display: grid;
+
+<h3 id="styledText">Welcome to the DevilCatz Mint Page!</h3>
+<br>
+  <div class="container" style="width: 100%; max-width: 850px;display: grid;
         justify-items: center; ">
 
+
     <div class="card" class="card-lightblue" style="width: 80%; max-width: 750px; ">
-      <div class="card-body">
-        <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
+      <div class="card-body" style="justify-content: center;
+      display: grid;
+      justify-items: center;">
+        <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="300vh" width="75%"
           style="border-radius: 5%" />
-        <div class="card-text">
-          <p>
+        <div class="card-text" id="styledText" style="justify-content: center;
+        display: grid;
+        justify-items: center; text-align: center;">
+        <br>
+          <p>       
+            <br>
+
             Price = {{contractPrice}} Eth
             <br>
             Max Mint = 50
@@ -135,4 +143,3 @@ display: grid; max-width: fit-content;">
   <!-- <div class="container" style="width:50%;"> -->
 
 
-</div>
